[project]
name = "gabie-fm"
version = "0.1.0"
description = "All things gabie"
readme = "README.md"
authors = [
    { name = "gabriela", email = "sg.villegasq@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.2",
]

[project.scripts]
gabie-fm = "gabie_fm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
